# Healthcare-Al

./: .env.example  .gitignore  ANNOTATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
src/healthcare_ai/: __init__.py  annotation.py  app.py  cli.py  data.py  evaluation.py  features.py  note_nlp.py  rag.py  retrieval.py  review_report.py  summarizer.py  triage.py
